--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <scripts>
+        <script>
             const pdfjsLib = require("pdfjs-dist/build/pdf.js");
             alert(pdfjsLib);
-        </scripts>
+        </script>
     </head>
     <body>
 
