--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script>
-            const pdfjsLib = require("pdfjs-dist/build/pdf.js");
+            const pdfjsLib = import("./pdfjs-dist/build/pdf.js");
             alert(pdfjsLib);
         </script>
     </head>
