--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </script>
     </head>
     <body>
-        <input type="file" accept="application/pdf" onchange="uploadPdf">
+        <input type="file" accept="application/pdf" onchange="uploadPdf(this)">
         <canvas ref="canvas" />
     </body>
 </html>
