変数名修正

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     reader.readAsArrayBuffer(file)
                 })
             };
-            async function render(pdf,page){
-                const page = await pdf.getPage(page)
+            async function render(pdf,num){
+                const page = await pdf.getPage(num)
                 const viewport = page.getViewport({ scale: 1 })
                 canvas.height = viewport.height
                 canvas.width = viewport.width
