--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     cMapPacked: true,
                 })
                 alert(pdf);
-                await render(pdf,1);
+                render(pdf,1);
             };
             function readFileAsync(file) {
             return new Promise((resolve, reject) => {
