--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <script src="./pdfjs-dist/build/pdf.js"></script>
         <script>
             const pdfjsLib = window['pdfjs-dist/build/pdf'];
+            pdfjsLib.GlobalWorkerOptions.workerSrc = "./pdfjs-dist/build/pdf.worker.js"
             const canvas = document.getElementById('display');
             async function uploadPdf(e) {
                 // PDFファイルデータをArrayBuffer型で取得
