--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
                 const fileData = await readFileAsync(e.files[0])
 
                 // PDFファイルのパース
-                let pdf;
+                const pdf =
                 pdfjsLib.getDocument({
                     data: fileData,
                     cMapUrl: './pdfjs-dist/web/cmaps/',
                     cMapPacked: true,
-                }).promise.then(function(pdfDoc_) {
-                    pdf = pdfDoc_;
-                    render(pdf,1);
-                });
-                
+                }).promise;
+                render(pdf,1);
             };
             function readFileAsync(file) {
             return new Promise((resolve, reject) => {
