--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 })
                 await task.promise
             }
-            function next(){
+            function nextPage(){
                 render(++currentPage);
             }
                 
