--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     cMapPacked: true,
                 }).promise;
                 currentPage = 1;
-                render(currentPage);
+                await render(currentPage);
+                countDown(30);
             };
             function readFileAsync(file) {
             return new Promise((resolve, reject) => {
@@ -48,7 +49,6 @@
                     viewport: viewport,
                 })
                 await task.promise
-                countDown(30);
             }
             function nextPage(){
                 if(pdf.numPages != currentPage){
