--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
                 const countDownDisp = document.getElementById('countDown');
                 countDownDisp.innerText = timer.getTimeValues().toString();
             });
+            timer.addEventListener('targetAchieved', function (e) {
+                alert('時間切れっす');
+            });
             pdfjsLib.GlobalWorkerOptions.workerSrc = "./pdfjs-dist/build/pdf.worker.js"
             async function uploadPdf(e) {
                 // PDFファイルデータをArrayBuffer型で取得
