--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
         <script src="./pdfjs-dist/build/pdf.js"></script>
         <script src="./easytimer.min.js"></script>
         <script>
-            window.onload = function() {
                 const pdfjsLib = window['pdfjs-dist/build/pdf'];
+                pdfjsLib.GlobalWorkerOptions.workerSrc = "./pdfjs-dist/build/pdf.worker.js"
                 let currentPage = 1;
                 let pdf;
                 let timer = new easytimer.Timer();
-                let isStart = false;
-                const resultText = document.getElementById('resultText');
-                var canvas = document.getElementById('display');
-                pdfjsLib.GlobalWorkerOptions.workerSrc = "./pdfjs-dist/build/pdf.worker.js"
-            }
-            timer.addEventListener('secondsUpdated', function (e) {
-                const countDownDisp = document.getElementById('countDown');
-                countDownDisp.innerText = timer.getTimeValues().toString();
-            });
-            timer.addEventListener('targetAchieved', function (e) {
-                timeOver();
-            });
+                timer.addEventListener('secondsUpdated', function (e) {
+                    const countDownDisp = document.getElementById('countDown');
+                    countDownDisp.innerText = timer.getTimeValues().toString();
+                });
+                timer.addEventListener('targetAchieved', function (e) {
+                    timeOver();
+                });
+
+                let resultText;
+                let canvas;
+                window.onload = function() {
+                    resultText = document.getElementById('resultText');
+                    canvas = document.getElementById('display');
+                }
             
             async function uploadPdf(e) {
                 // PDFファイルデータをArrayBuffer型で取得
