visibilityで消すように

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 startGame();
             }
             function doAnswer(){
-                canvas.style.display = "none";
+                canvas.style.visibility  = "hidden";
                 const answer = prompt('答えを入力してください');
                 putText(answer);
                 alert("次の問題へ");
