--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                 alert("次の問題へ");
                 startGame();
             }
-            function hideCanvas(){
-                canvas.style.visibility  = "hidden";
-            }
-
             function doAnswer(){
-                
+                canvas.style.visibility  = "hidden";
                 const timeStr = timer.getTimeValues().toString();
+                timer.stop();
+                setTimeout(procAnswer, 10 , timeStr);
+            }
+            function procAnswer(timeStr){
                 const answer = prompt('答えを入力してください');
                 putText(answer,timeStr);
                 alert("次の問題へ");
@@ -134,7 +134,7 @@
         </div>
         <div>
             ４．わかったら【ANSWER】で答えよう。問題じゃないページは【SKIP】できるよ
-            <input type="button" onclick="hideCanvas();doAnswer();" value=" A N S W E R ">
+            <input type="button" onclick="doAnswer()" value=" A N S W E R ">
 
             <input type="button" onclick="startGame()" value=" S K I P ">
         </div>
