timerをリセットするように

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 countDown(30);
             }
             function countDown(sec){
+                timer.reset();
                 timer.start({countdown: true, startValues: {seconds: sec}});
             }
             function putText(answer,timeStr){
