timerNewの時に既存のTimerを止めるように

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                 countDown(30);
             }
             function timerNew(){
+                if(timer != null){
+                    timer.stop();
+                }
                 timer = new easytimer.Timer();
                 timer.addEventListener('secondsUpdated', function (e) {
                     const countDownDisp = document.getElementById('countDown');
