timerを明示的にnullに（念のため）

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             function timerNew(){
                 if(timer != null){
                     timer.stop();
+                    timer.off();
+                    timer = null;
                 }
                 timer = new easytimer.Timer();
                 timer.addEventListener('secondsUpdated', function (e) {
