全問終了でtimerを止める

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             function startGame(){
                 if(pdf.numPages == currentPage){
                     alert('全問終了だよ！');
+                    timerNew();
                     return;
                 }
                 nextPage();
